# rag

./: .gitignore  README.md  client.py  default.json  default_bad.json  example.py  fnuser.py  kmclient.py  main.py  pyproject.toml  register_all.py  registry.py  simpletools.py
components/: cinema.py  default.py  example.py  mytools.py  mytools3.py  mytools4.py  mytools5.py  mytools6.py  preupd.py  show.py  simpletools.py  test.py  tmp.py  windef.py
engine/: asgi.py  settings.py  urls.py
frontend/: package.json  webpack.config.js
frontend/src/: index.js
frontend/src/components/: App.css  App.js  CalculationsTablePopup.js  ComponentFileSelector.js  ConfigCreateForm.js  ConfigDetails.js  ConfigList.js  ItemSelector.js  MonacoCodeEditorPopup.js  ScriptsListPopup.js  SettingsField.js  updateTerminalLines.js
frontend/src/utils/: splitAnsiLineByVisibleLength.js
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
kmengine/: consumers.py  models.py  routing.py
kmengine/migrations/: 0001_initial.py  0002_config_remove_calculation_calc_type_and_more.py  0003_calculation_calculation_status_valid_and_more.py  0004_alter_calculation_config.py  0005_script.py  0006_add_default_script.py  0007_script_created_at_script_updated_at_and_more.py  0008_calculation_input_calculation_output.py
utils/: document.py  fnuser.py  import_getter.py  ollama_utils.py  readers.py  registry.py  splitters.py  string_importer_utils.py  tqdm_global_config.py
