[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]>=4.2.2",
    "django>=5.2",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "jupyter-client>=8.6.3",
    "redis>=5.2.1",
    "tqdm>=4.67.1",
]
