[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "chromadb>=1.0.10",
    "colorama>=0.4.6",
    "django>=5.2",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.6",
    "jupyter-client>=8.6.3",
    "markdownify>=1.1.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.8",
    "prompt-toolkit>=3.0.51",
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "qdrant-client>=1.14.2",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]
